--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>牛赛博牛马任务管理系统 (红运版)</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#fee2e2">
+    <meta name="theme-color" content="#dc2626">
     
     <!-- 1. 引入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -43,7 +43,7 @@
         .drag-over { background-color: rgba(239, 68, 68, 0.1); border-color: #ef4444; border-style: dashed; }
     </style>
 </head>
-<body class="bg-gradient-to-br from-red-50 via-orange-50 to-rose-50 min-h-screen text-slate-600 selection:bg-red-100 selection:text-red-700 pb-safe">
+<body class="bg-red-600 min-h-screen text-slate-600 selection:bg-red-100 selection:text-red-700 pb-safe">
     <div id="root"></div>
 
     <script type="text/babel" data-type="module">
@@ -556,7 +556,7 @@
                  <div className="flex items-center justify-between w-full md:w-auto gap-4">
                     <div className="flex items-center gap-3">
                         <div className="bg-red-600 text-white w-8 h-8 flex items-center justify-center rounded-lg font-bold text-lg shadow-md shadow-red-200">牛</div>
-                        <h1 className="font-bold text-lg tracking-tight text-slate-800">赛博牛马</h1>
+                        <h1 className="font-bold text-lg tracking-tight text-slate-800">赛博牛马的逆袭</h1>
                     </div>
                     {/* Mobile Menu Button - Replaces desktop buttons on mobile */}
                     <div className="md:hidden relative">
