--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>牛赛博牛马任务管理系统 (幻彩红底版)</title>
+    <title>赛博牛马任务管理系统 (幻彩红底版)</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- 系统主题色保持红色，配合 iPhone 识别 -->
@@ -42,6 +42,12 @@
         /* 拖拽相关样式 */
         .dragging { opacity: 0.5; }
         .drag-over { background-color: rgba(99, 102, 241, 0.1); border-color: #6366f1; border-style: dashed; }
+
+        /* --- 新增：隐藏 datalist 原生下拉箭头，但保留输入联想功能 --- */
+        input::-webkit-calendar-picker-indicator {
+            opacity: 0 !important;
+            display: none !important;
+        }
     </style>
 </head>
 <!-- 
@@ -269,7 +275,16 @@
               <div className="bg-white rounded-xl shadow-2xl max-w-lg w-full p-6 animate-in fade-in zoom-in duration-200 max-h-[90vh] overflow-y-auto">
                 <div className="flex justify-between items-center mb-6 border-b border-gray-100 pb-4"><h3 className="text-xl font-bold text-gray-900 flex items-center gap-2"><Settings size={24} className="text-gray-500" /> 系统设置</h3><button onClick={onClose} className="text-gray-400 hover:text-gray-600"><X size={24} /></button></div>
                 <div className="space-y-6">
-                  {isOffline && (<div className="bg-amber-50 p-4 rounded-lg border border-amber-100"><h4 className="font-bold text-amber-900 mb-2 flex items-center gap-2"><CloudOff size={18} /> 离线状态</h4><button onClick={onSyncToCloud} disabled={isProcessing} className="w-full py-2 bg-amber-500 text-white rounded-lg hover:bg-amber-600 transition flex items-center justify-center gap-2 font-medium shadow-sm">{isProcessing ? <Loader2 className="animate-spin" size={18}/> : <Upload size={18}/>} 同步本地数据到云端</button></div>)}
+                  {isOffline && (
+                    <div className="bg-amber-50 p-4 rounded-lg border border-amber-100">
+                        <h4 className="font-bold text-amber-900 mb-2 flex items-center gap-2"><CloudOff size={18} /> 离线状态</h4>
+                        <p className="text-xs text-amber-700 mb-3">当前使用本地缓存。重连将自动合并本地数据与云端记录。</p>
+                        <button onClick={onSyncToCloud} disabled={isProcessing} className="w-full py-2 bg-amber-500 text-white rounded-lg hover:bg-amber-600 transition flex items-center justify-center gap-2 font-medium shadow-sm">
+                            {isProcessing ? <Loader2 className="animate-spin" size={18}/> : <Upload size={18}/>} 
+                            重新连接云端
+                        </button>
+                    </div>
+                  )}
                   <div className="bg-violet-50 p-4 rounded-lg border border-violet-100"><h4 className="font-bold text-violet-900 mb-3 flex items-center gap-2"><Cpu size={18} /> Silicon Flow AI 配置</h4><div className="space-y-4"><div><label className="text-xs font-bold text-violet-800 mb-1 block">API Key</label><input type="password" value={userKey} onChange={(e) => setUserKey(e.target.value)} placeholder="sk-..." className="w-full px-3 py-2 border border-violet-200 rounded text-sm focus:ring-2 focus:ring-violet-300 outline-none" /><p className="text-[10px] text-violet-500 mt-1">* 默认内置 Key 已启用，如需覆盖请输入新 Key</p></div><div><label className="text-xs font-bold text-violet-800 mb-1 block">API 地址</label><input type="text" value={baseUrl} onChange={(e) => setBaseUrl(e.target.value)} className="w-full px-3 py-2 border border-violet-200 rounded text-sm focus:ring-2 focus:ring-violet-300 outline-none" /></div><div><label className="text-xs font-bold text-violet-800 mb-1 block">模型选择</label><select value={selectedModel} onChange={(e) => setSelectedModel(e.target.value)} className="w-full px-3 py-2 border border-violet-200 rounded text-sm focus:ring-2 focus:ring-violet-300 outline-none bg-white">{modelOptions.map(opt => <option key={opt.value} value={opt.value}>{opt.label}</option>)}<option value="custom">自定义模型 ID...</option></select>{selectedModel === 'custom' && (<input type="text" placeholder="输入模型完整 ID" onBlur={(e) => setSelectedModel(e.target.value)} className="mt-2 w-full px-3 py-2 border border-violet-200 rounded text-sm focus:ring-2 focus:ring-violet-300 outline-none" />)}</div><button onClick={handleSaveSettings} className="w-full py-2 bg-violet-600 text-white rounded-lg font-bold hover:bg-violet-700 transition shadow-sm">保存 AI 配置</button></div></div>
                   <div className="grid grid-cols-2 gap-3"><button onClick={onExport} disabled={isProcessing} className="py-2 bg-blue-50 text-blue-600 border border-blue-200 rounded-lg hover:bg-blue-100 transition flex items-center justify-center gap-2 text-sm font-bold"><Download size={16} /> 导出备份</button><button onClick={() => fileInputRef.current?.click()} disabled={isProcessing} className="py-2 bg-orange-50 text-orange-600 border border-orange-200 rounded-lg hover:bg-orange-100 transition flex items-center justify-center gap-2 text-sm font-bold"><Upload size={16} /> 导入恢复</button><input type="file" ref={fileInputRef} accept=".json" onChange={handleFileChange} className="hidden" /></div>
                 </div>
@@ -442,7 +457,7 @@
                 const tPromise = supabase.from('tasks').select('*').eq('app_id', PUBLIC_APP_ID).order('created_at', { ascending: false });
                 const [pRes, tRes] = await Promise.race([
                     Promise.all([pPromise, tPromise]),
-                    new Promise((_, reject) => setTimeout(() => reject(new Error('timeout')), 3000))
+                    new Promise((_, reject) => setTimeout(() => reject(new Error('timeout')), 10000))
                 ]);
                 if (pRes.error) throw pRes.error;
                 if (tRes.error) throw tRes.error;
