--- a/index.html
+++ b/index.html
@@ -43,10 +43,24 @@
         .dragging { opacity: 0.5; }
         .drag-over { background-color: rgba(99, 102, 241, 0.1); border-color: #6366f1; border-style: dashed; }
 
-        /* --- 新增：隐藏 datalist 原生下拉箭头，但保留输入联想功能 --- */
+        /* --- 暴力隐藏 datalist 原生下拉箭头 (覆盖 PC 和 移动端) --- */
+        
+        /* 针对 WebKit 内核 (Chrome, Safari, 移动端浏览器) */
         input::-webkit-calendar-picker-indicator {
-            opacity: 0 !important;
             display: none !important;
+            opacity: 0 !important;
+            -webkit-appearance: none !important;
+            width: 0 !important;
+            height: 0 !important;
+            background: none !important;
+        }
+
+        /* 针对 input 本身，移除移动端默认样式 */
+        input[list] {
+            -webkit-appearance: none !important;
+            -moz-appearance: none !important;
+            appearance: none !important;
+            background-image: none !important; /* 防止部分浏览器显示背景图箭头 */
         }
     </style>
 </head>
